[package]
name = "sign_message"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# base64 = "0.22.0"
# hex = "0.4.3"
# rand = "0.8.5"
# rand_chacha = "0.3.1"
# ring = "0.17.8"
# cargo add secp256k1 --features rand-std
secp256k1 = { version = "0.28.2", features = ["hashes", "rand-std", "global-context"] }
sha256 = "1.5.0"
# sha2 = "0.10.8"
