[package]
name = "sign_message"
version = "0.0.0"
authors = ["admin <admin@gnostr.org>"]
description = "secp256k1: sign a message example"
documentation = "https://crates.io/users/RandyMcMillan"
edition = "2021"
keywords = ["gnostr", "secp256k1"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/gnostr-org/sign_message"

[dev-dependencies]
futures01 = { package = "futures", version = "0.1" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
regex = "1.10.3"
secp256k1 = { version = "0.28.2", features = ["hashes", "rand-std", "global-context"] }
serde_json = "1.0.114"
[features]
integration_tests = []
[lib]
path = "src/lib.rs"
